<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="hello">Calculator</string>
    <string name="app_name">Calculator</string>
    <string name="Clear">AC</string>
    <string name="History">HS</string>
    <string name="Delete">Del</string>
    <string name="MemoryStore">MS</string>
    <string name="MemoryRetrieve">MR</string>
    <string name="MemoryClear">MC</string>
    <string name="MemoryPlus">M+</string>
    <string name="MemoryMinus">M-</string>
    <string name="Zero">0</string>
    <string name="One">1</string>
    <string name="Two">2</string>
    <string name="Three">3</string>
    <string name="Four">4</string>
    <string name="Five">5</string>
    <string name="Six">6</string>
    <string name="Seven">7</string>
    <string name="Eight">8</string>
    <string name="Nine">9</string>
    <string name="Equal">=</string>
    <string name="Plus">+</string>
    <string name="Minus">-</string>
    <string name="Mult">*</string>
    <string name="Div">/</string>
    <string name="Dot">.</string>
    <string name="orange">#FF4500</string>

</resources>