<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
	android:layout_width="fill_parent"
	android:layout_height="fill_parent" 
	android:orientation="vertical">
    
   <TableLayout
	   android:id="@+id/tablelayout1"
	   android:layout_width="match_parent"
	   android:layout_height="0dp"
	   android:layout_weight="3" > 
	   <TableRow 
		    android:layout_width="match_parent"				    
		    android:layout_height="0dp"
		    android:layout_weight="1">
		    <TextView
		        android:id="@+id/texthist"
		        android:layout_width="match_parent"
		        android:layout_height="match_parent"
		        android:layout_weight="1"
		        android:background="@android:color/white"
		        android:textColor="@android:color/black" 
		        android:gravity="right"
		        android:textSize="25sp"
		        android:paddingTop="30dp">
	    	</TextView>
		</TableRow>
		
    	<TableRow
		    android:layout_width="fill_parent"
		    android:layout_weight="1"
		    android:layout_height="fill_parent">
	    	<EditText
		        android:id="@+id/text_view_id"
		        android:layout_height="match_parent"
		     	android:layout_width="match_parent"
		     	android:inputType="text"
		     	android:layout_weight="1"
		     	android:gravity="right"
		     	android:paddingTop="50dp"
		     	android:textSize="40sp"
		     	android:background="@android:color/white"
				android:textColor="@android:color/black" />   
    	</TableRow>
    </TableLayout>
    
    <TableLayout
	    android:id="@+id/tablelayout2"
	    android:layout_width="match_parent"
	    android:layout_height="0dp"
	    android:layout_weight="5"
	    android:background="@android:color/white"> 
	    <TableRow
		    android:layout_height="match_parent"
		   	android:layout_width="wrap_content"
		   	android:layout_weight="1" >
	    	<Button
		     android:id="@+id/button_idHistory"
		     android:layout_height="match_parent"
		     android:layout_width="wrap_content"
		     android:text="@string/History" 
		     android:layout_weight="1"
		     android:textSize="15sp"
		     android:background="@drawable/border"/>
	    	<Button
		     android:id="@+id/button_idMS"
		     android:layout_height="match_parent"
		     android:layout_width="wrap_content"
		     android:text="@string/MemoryStore" 
		     android:layout_weight="1"
		     android:textSize="15sp"
		     android:background="@drawable/border"/>
	        <Button
		     android:id="@+id/button_idMR"
		     android:layout_height="match_parent"
		     android:layout_width="wrap_content"
		     android:text="@string/MemoryRetrieve" 
		     android:layout_weight="1"
		     android:textSize="15sp"
		     android:background="@drawable/border"/>
	        <Button
		     android:id="@+id/button_idClear"
		     android:layout_height="match_parent"
		     android:layout_width="wrap_content"
		     android:text="@string/Clear" 
		     android:layout_weight="1"
		     android:textSize="15sp"
		     android:textColor="#FF4500" 
		     android:background="@drawable/border"/>
    	</TableRow>
        
	    <TableRow
	        android:layout_height="match_parent"
	    	android:layout_width="wrap_content"
	    	android:layout_weight="1">
	        <Button
		     android:id="@+id/button_idMemoryClear"
		     android:layout_height="match_parent"
		     android:layout_width="wrap_content"
		     android:text="@string/MemoryClear" 
		     android:layout_weight="1"
		     android:textSize="15sp"
		     android:background="@drawable/border"/>
	        
	        <Button
		     android:id="@+id/button_idMPlus"
		     android:layout_height="match_parent"
		     android:layout_width="wrap_content"
		     android:text="@string/MemoryPlus" 
		     android:layout_weight="1"
		     android:textSize="15sp"
		     android:background="@drawable/border"/>
	        <Button
		     android:id="@+id/button_idMMinus"
		     android:layout_height="match_parent"
		     android:layout_width="wrap_content"
		     android:text="@string/MemoryMinus" 
		     android:layout_weight="1"
		     android:textSize="15sp"
		     android:background="@drawable/border"/>
	        <Button
		     android:id="@+id/button_idDelete"
		     android:layout_height="match_parent"
		     android:layout_width="wrap_content"
		     android:text="@string/Delete" 
		     android:layout_weight="1"
		     android:textSize="15sp"
		     android:background="@drawable/border"/>
    	</TableRow>
    
    	<TableRow
	        android:layout_height="match_parent"
	    	android:layout_width="wrap_content"
	    	android:layout_weight="1">
	        <Button
		     android:id="@+id/button_id7"
		     android:layout_height="match_parent"
		     android:layout_width="wrap_content"
		     android:text="@string/Seven"
		     android:layout_weight="1"
		     android:textSize="15sp"
		     android:background="@drawable/border"/>
	        <Button
		     android:id="@+id/button_id8"
		     android:layout_height="match_parent"
		     android:layout_width="wrap_content"
		     android:text="@string/Eight" 
		     android:layout_weight="1"
		     android:textSize="15sp"
		     android:background="@drawable/border"/>
	        <Button
		     android:id="@+id/button_id9"
		     android:layout_height="match_parent"
		     android:layout_width="wrap_content"
		     android:text="@string/Nine" 
		     android:layout_weight="1"
		     android:textSize="15sp"
		     android:background="@drawable/border"/>
	        <Button
		     android:id="@+id/button_iddiv"
		     android:layout_height="match_parent"
		     android:layout_width="wrap_content"
		     android:text="@string/Div" 
		     android:layout_weight="1"
		     android:textSize="15sp"
		     android:background="@drawable/border"/>
    	</TableRow>
    
    	<TableRow
	        android:layout_height="match_parent"
	    	android:layout_width="wrap_content"
	    	android:layout_weight="1">
	        <Button
		     android:id="@+id/button_id4"
		     android:layout_height="match_parent"
		     android:layout_width="wrap_content"
		     android:text="@string/Four" 
		     android:layout_weight="1"
		     android:textSize="15sp"
		     android:background="@drawable/border"/>
	        <Button
		     android:id="@+id/button_id5"
		     android:layout_height="match_parent"
		     android:layout_width="wrap_content"
		     android:text="@string/Five" 
		     android:layout_weight="1"
		     android:textSize="15sp"
		     android:background="@drawable/border"/>
	        <Button
		     android:id="@+id/button_id6"
		     android:layout_height="match_parent"
		     android:layout_width="wrap_content"
		     android:text="@string/Six" 
		     android:layout_weight="1"
		     android:textSize="15sp"
		     android:background="@drawable/border"/>
	        <Button
		     android:id="@+id/button_idmult"
		     android:layout_height="match_parent"
		     android:layout_width="wrap_content"
		     android:text="@string/Mult" 
		     android:layout_weight="1"
		     android:textSize="15sp"
		     android:background="@drawable/border"/>  
		</TableRow>
        
    	<TableRow
	        android:layout_height="match_parent"
	    	android:layout_width="wrap_content"
	    	android:layout_weight="1">
	        <Button
		     android:id="@+id/button_id1"
		     android:layout_height="match_parent"
		     android:layout_width="wrap_content"
		     android:text="@string/One" 
		     android:layout_weight="1"
		     android:textSize="15sp"
		     android:background="@drawable/border"/>
	        <Button
		     android:id="@+id/button_id2"
		     android:layout_height="match_parent"
		     android:layout_width="wrap_content"
		     android:text="@string/Two" 
		     android:layout_weight="1"
		     android:textSize="15sp"
		     android:background="@drawable/border"/>
	        <Button
		     android:id="@+id/button_id3"
		     android:layout_height="match_parent"
		     android:layout_width="wrap_content"
		     android:text="@string/Three" 
		     android:layout_weight="1"
		     android:textSize="15sp"
		     android:background="@drawable/border"/>  
		     <Button
		     android:id="@+id/button_idminus"
		     android:layout_height="match_parent"
		     android:layout_width="wrap_content"
		     android:text="@string/Minus" 
		     android:layout_weight="1"
		     android:textSize="15sp"
		     android:background="@drawable/border"/>
		</TableRow>
	
    	<TableRow
	        android:layout_height="match_parent"
	    	android:layout_width="wrap_content"
	    	android:layout_weight="1">
		     <Button
		     android:id="@+id/button_iddot"
		     android:layout_height="match_parent"
		     android:layout_width="wrap_content"
		     android:text="@string/Dot" 
		     android:layout_weight="1"
		     android:textSize="15sp"
		     android:background="@drawable/border"/>
	        <Button
		     android:id="@+id/button_id0"
		     android:layout_height="match_parent"
		     android:layout_width="wrap_content"
		     android:text="@string/Zero" 
		     android:layout_weight="1"
		     android:textSize="15sp"
		     android:background="@drawable/border"/>
	        <Button
		     android:id="@+id/button_idequal"
		     android:layout_height="match_parent"
		     android:layout_width="wrap_content"
		     android:text="@string/Equal"
		     android:layout_weight="1"
		     android:textSize="15sp"
		     android:background="@drawable/border"/>
	        <Button
		     android:id="@+id/button_idplus"
		     android:layout_height="match_parent"
		     android:layout_width="wrap_content"
		     android:text="@string/Plus" 
		     android:layout_weight="1"
		     android:textSize="15sp"
		     android:background="@drawable/color"/>  
	 	</TableRow>
	 </TableLayout>
</LinearLayout>  